<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/main"
        android:title="@string/main"
        android:icon="@drawable/home_icon_silhouette"></item>

    <item android:id="@+id/gaz"
        android:title="@string/gaz"
        android:icon="@drawable/flame"></item>

    <item android:id="@+id/voda"
        android:title="@string/voda"
        android:icon="@drawable/drop"></item>

    <item android:id="@+id/elektruka"
        android:title="@string/elektruka"
        android:icon="@drawable/flash"></item>

    <item android:id="@+id/perekrutia"
        android:title="@string/perekrutia"
        android:icon="@drawable/road_perspective"></item>

    <item android:id="@+id/wtorm"
        android:title="@string/wtorm"
        android:icon="@drawable/attention"></item>
    <item android:title="Налаштування">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/settings_gears"
                android:title="Додати новину" />
            <!--<item-->
                <!--android:icon="@drawable/notifications_button"-->
                <!--android:title="Сповіщення" />-->
        </menu>
    </item>
</menu>