<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/main"
        android:title="@string/main"
        android:icon="@drawable/home_icon_silhouette"></item>

    <item android:id="@+id/gaz"
        android:title="@string/gaz"
        android:icon="@drawable/flame"></item>

    <item android:id="@+id/voda"
        android:title="@string/voda"
        android:icon="@drawable/drop"></item>

    <item android:id="@+id/elektruka"
        android:title="@string/elektruka"
        android:icon="@drawable/flash"></item>

    <item android:title="Other">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/settings_gears"
                    android:title="Settings" />
                <item
                    android:icon="@drawable/notifications_button"
                    android:title="Notifications" />
            </group>
        </menu>
    </item>
</menu>